 - GB, GBA Savedata: Fix leaks when loading masked save (fixes mgba.io/i/1197)
 - Qt: Fix focus issues with load/save state overlay
 - GB Video: Fix SGB border hole size
 - PSP2: Fix tearing issues (fixes mgba.io/i/1211)
 - Qt: Fix mapping analog triggers (fixes mgba.io/i/495)
 - Qt: Grab focus when game starts (fixes mgba.io/i/804)
 - Core: Remember to deinit proxy ring FIFO
Misc:
 - mGUI: Add SGB border configuration option
 - mGUI: Add support for different settings types
 - Wii: Define _GNU_SOURCE (fixes mgba.io/i/1106)
 - Wii: Expose stretch configuration in settings
 - Wii: Stretch now sets pixel-accurate mode size cap
 - Qt: Ensure camera image is valid
 - GB: Improved SGB2 support
 - Libretro: Reduce rumble callbacks
 - Debugger: Minor text fixes
 - Qt: Debugger console history
 - Qt: Detect presence of GL_ARB_framebuffer_object
 - Python: Minor API improvements
 - Qt: Minor memory view tweaks
 - CMake: Fix libswresample version dependencies (fixes mgba.io/i/1229)

0.7 beta 1: (2018-09-24)
- Initial beta for 0.7

0.6.3: (2018-04-14)
Bugfixes:
 - GB Audio: Revert unsigned audio changes
 - GB Video: Fix bad merge (fixes mgba.io/i/1040)
 - GBA Video: Fix OBJ blending regression (fixes mgba.io/i/1037)

0.6.2: (2018-04-03)
Bugfixes:
 - Core: Fix ROM patches not being unloaded when disabled (fixes mgba.io/i/962)
 - 3DS: Fix opening files in directory names with trailing slashes
 - LR35902: Fix watchpoints not reporting new value
 - GB MBC: Fix MBC2 saves (fixes mgba.io/i/954)
 - GB Memory: HDMAs should not start when LCD is off (fixes mgba.io/i/310)
 - GB Memory: Fix OAM DMA blocking regions (fixes mgba.io/i/1013)
 - GB Video: Only trigger STAT write IRQs when screen is on (fixes mgba.io/i/912)
 - GBA: Fix some GBA ROM misdetection (fixes mgba.io/i/978)
 - GBA: Fix SharkPort saves for EEPROM games
 - GBA Audio: Increase PSG volume (fixes mgba.io/i/932)
 - GBA BIOS: Fix incorrect exit condition in LZ77
 - GBA Cheats: Fix PARv3 slide codes (fixes mgba.io/i/919)