@@ -892,7 +892,11 @@ void GBAStore16(struct ARMCore* cpu, uint32_t address, int16_t value, int* cycle
 			mLOG(GBA_MEM, INFO, "Detected EEPROM savegame");
 			GBASavedataInitEEPROM(&memory->savedata);
 		}
-		GBASavedataWriteEEPROM(&memory->savedata, value, 1);
+		if (memory->savedata.type == SAVEDATA_EEPROM) {
+			GBASavedataWriteEEPROM(&memory->savedata, value, 1);
+			break;
+		}
+		mLOG(GBA_MEM, GAME_ERROR, "Bad memory Store16: 0x%08X", address);
 		break;
 	case REGION_CART_SRAM:
 	case REGION_CART_SRAM_MIRROR:
