@@ -127,6 +127,7 @@ Bugfixes:
  - Qt: Fix mapping analog triggers (fixes mgba.io/i/495)
  - Qt: Grab focus when game starts (fixes mgba.io/i/804)
  - Core: Remember to deinit proxy ring FIFO
+ - GBA Savedata: Fix EEPROM writing codepath when savetype is not EEPROM
 Misc:
  - mGUI: Add SGB border configuration option
  - mGUI: Add support for different settings types
